[package]
name = "cerberus-core-types"
version = "0.1.0"
edition = "2021"
authors = ["SynergiaOS <202778732+SynergiaOS@users.noreply.github.com>"]
description = "Shared types for Cerberus Phoenix Evolved - HFT trading system"
license = "MIT"
repository = "https://github.com/SynergiaOS/cerberus-phoenix-evolved"

[dependencies]
solana-sdk = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
